Wed Jan 19 01:16:30 2005  Tanaka Akira  <akr@m17n.org>

	* lib/resolv.rb (Resolv::DNS::Config.parse_resolv_conf): ignore
	  domain and search directive without an argument.
	  reported by Sam Roberts.  [ruby-talk:126781]

Mon Jan 17 23:33:46 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (aix): fix typo.  [ruby-talk:126401]

Mon Jan 17 07:08:51 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/readline/readline.c: suppress warnings.

	* lib/irb/extend-command.rb (IRB::ContextExtender.def_extend_command):
	  ditto.

	* lib/irb/ext/history.rb (IRB::Context::set_last_value): ditto.

	* lib/irb/ext/history.rb (IRB::Context::eval_history): ditto.

	* lib/irb/locale.rb (IRB::Locale::real_load): ditto.

	* lib/irb/slex.rb (SLex::Node::create_subnode): remove garbage.

Mon Jan 17 00:09:42 2005  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/uri/common.rb (PORT): typo fix. fixed: [ruby-core:04256]

Sat Jan 15 14:57:22 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (proc_options): ignore trailing CRs at the end of short
	  options as well as long options.  fixed: [ruby-core:04232]

Sat Jan 15 13:44:22 2005  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb (RSS::VERSION): 0.1.2 -> 0.1.3.

	* lib/rss/rss.rb: accept inheritance. [ruby-talk:126104]

Wed Jan 12 00:36:29 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_class_superclass): superclass of singleton class also
	  should be a singleton class.  fixed: [ruby-list:40519]

Tue Jan 11 20:58:52 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (remain_size): use buffered data instead of unreading to avoid
	  inconsistency of text mode.  fixed: [ruby-dev:25446]

Tue Jan 11 09:37:53 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* numeric.c (Init_Numeric): turn off floating point exceptions
	  on bcc32. "1e300".to_f had crashed by overflow.

Mon Jan 10 23:07:45 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_autoload): hide internal data from ruby level.