@@ -1,3 +1,7 @@
+Wed Jan 19 18:02:19 2005  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* lib/ipaddr.rb (to_s, test_to_s): too many colons with some cases.
+
 Wed Jan 19 01:16:30 2005  Tanaka Akira  <akr@m17n.org>
 
 	* lib/resolv.rb (Resolv::DNS::Config.parse_resolv_conf): ignore
